2016-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 1.11.0-1

	* inst/include/asio*: Once again included

	* DESCRIPTION: Add Copyright: reference to inst/COPYRIGHTS, overall
	Copyright: back to BSL-1.0

	* inst/COPYRIGHTS: Detailing Asio copyrights

	* .Rbuildignore: Ignore unused/
	* configure: Moved to unused/
	* configure.win: Ditto

2016-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* .Rbuildignore: No longer install inst/include/asio*

	* configure: New File, installing asioHeaders.tar.gz as needed
	* configure.win: Ditto

	* DESCRIPTION: Copyright: GPL (>= 2) for the R package
	* README.md: Ditto

2015-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Expanded, and explicitly mention Chris Kohlhoff

	* .gitignore: Small but important correction to not exclude local/

	* tests/simpleTests.R: Minimal test added

	* inst/NEWS.Rd: Added

2015-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/: Initial version based on asio-1.11.0