@@ -3,6 +3,12 @@
 \newcommand{\cpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \newcommand{\ghissue}{\href{https://github.com/eddelbuettel/asioheaders/issues/#1}{##1}}
 
+\section{Changes in version 1.11.0-1 (2017-xx-yy)}{
+  \itemize{
+    \item Updated Travis CI support via newer \code{run.sh}
+  }
+}
+
 \section{Changes in version 1.11.0-1 (2015-12-30)}{
   \itemize{
     \item First Version and first CRAN upload
